Fix spacing

--- a/src/components/StatsYesNo.module.scss
+++ b/src/components/StatsYesNo.module.scss
@@ -10,6 +10,7 @@
 }
 
 .YesNoContainer {
+  margin-bottom: 90px;
   padding: 30px 0;
   cursor: auto;
   pointer-events: none;
